Select details by clicking the line, avoid the horizontal move of button. Softer switching between embedded details. When hiding or emptying the contentdetails box the horizontal scrollbar would go on and off, leading to a position change for everything that is not oriented left.
git-svn-id: https://optime.repos.se/svn/code/repos/trunk@5951 94f62164-8fde-0310-83d7-e1105c8c1596

--- a/repos-web/style/repository/repository.css
+++ b/repos-web/style/repository/repository.css
@@ -28,6 +28,14 @@
 	border-left: 1px solid #ebebeb;
 	background-color: #fff;
 }
+.contentdetails .closebutton {
+	color: #999;
+	cursor: pointer;
+	font-size: 120%;
+}
+.contentdetails.loading .closebutton {
+	visibility: hidden;
+}
 .index li:hover {
 	background-position: top center;
 	background-repeat: no-repeat;
